--- a/interactive-web/apple-clone/study/index.html
+++ b/interactive-web/apple-clone/study/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head lang="ko">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -82,5 +82,8 @@
 			2020, 1분코딩
 		</footer>
 	</div>
+
+	<script src="js/main.js"></script>
+
 </body>
 </html>
