--- a/interactive-web/apple-clone/study/videotest/01-video.html
+++ b/interactive-web/apple-clone/study/videotest/01-video.html
@@ -39,8 +39,8 @@
 				console.log(progress);
 				if (progress < 0) progress = 0;
 				if (progress > 1) progress = 1;
-
 				videoElem.currentTime = videoElem.duration * progress;
+				console.log(`video-duration: ${videoElem.duration}, progress: ${progress}, current: ${videoElem.currentTime}`)
 			});
 		}
 
